# nexus

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  TODO.md  clippy.toml  docker-compose.yaml  nexus-upstream-requirements.md
.github/workflows/: build-images.yml  ci.yml  publish-charts.yml
.serena/: project.yml
deploy/: README.md
deploy/caddy/: Caddyfile  Caddyfile.ari  Caddyfile.lab  Caddyfile.outage  Dockerfile  README.md  acme-account-transit-init.sh  docker-compose.ari-lab.yaml  docker-compose.lab.yaml  docker-compose.outage-lab.yaml
deploy/caddy/ari-lab/: pebble-config.json
deploy/compose/: .env.example  docker-compose.yaml
deploy/compose/envoy/: envoy.yaml
deploy/compose/policy/: admin.cedarschema  schema.cedarschema
deploy/compose/secrets/: .gitignore  README.md
deploy/compose/signing/: .gitignore  README.md  transit-init.sh
deploy/helm/edge-platform/: .gitignore  Chart.yaml  values.yaml
deploy/helm/identity-plane/: .gitignore  Chart.yaml  values.yaml
deploy/helm/routing-plane/: Chart.yaml  values.yaml
docs/: admin-apis.md  backend-pools.md  box-consumer-contract.md  box-signing-handoff.md  customer-api-keys-runbook.md  go-live-walkthrough.md  infra-findings.md  on-demand-tls.md  runbook-contract-signing-keys.md  runbook-custom-domains-tls.md  tenancy-and-identity.md
docs/examples/python/: README.md  box_server.py  example_admin_tokens.py  example_audit.py  example_authz.py  example_domains.py  example_onboarding.py  nexus_client.py
docs/openapi/: README.md  authz-admin.yaml  control-plane.yaml
edge/: envoy.yaml
identity-rs/: .dockerignore  Cargo.toml  Dockerfile  MIGRATION.md  README.md
identity-rs/authz-admin/: Cargo.toml
identity-rs/authz-admin/src/: audit_api.rs  main.rs
identity-rs/core/: Cargo.toml
identity-rs/core/src/: api_key.rs  audit.rs  authz.rs  contract.rs  ids.rs  lib.rs  membership.rs  platform.rs  policy.rs  principal.rs  profile.rs  projection.rs  reconcile.rs  store.rs  sync.rs  telemetry.rs  workspace_plan.rs
identity-rs/membership-sync/: Cargo.toml
identity-rs/membership-sync/src/: main.rs
identity-rs/policy-cedar/: Cargo.toml
identity-rs/policy-cedar/policies/: policy.cedar
identity-rs/policy-cedar/src/: lib.rs
identity-rs/reconciler/: Cargo.toml
identity-rs/reconciler/src/: main.rs
identity-rs/sidecar/: Cargo.toml
identity-rs/sidecar/src/: api.rs  api_key_cache.rs  authz.rs  bootstrap.rs  enrich.rs  extract.rs  jwks.rs  keyprovider.rs  main.rs  rotation.rs  serve.rs  signer.rs  state.rs  test_support.rs  token_cache.rs  transit.rs
identity-rs/sidecar/src/testdata/: other-jwks.json  test-ec-p256.pem  test-jwks.json
identity-rs/store-mongo/: Cargo.toml
identity-rs/store-mongo/src/: lib.rs
identity-rs/store-postgres/: Cargo.toml
identity-rs/store-postgres/migrations/: 0001_platform_services.sql  0002_api_keys.sql  0003_admin_audit.sql
identity-rs/store-postgres/src/: admin_audit.rs  api_keys.rs  authz.rs  hasher.rs  lib.rs  platform_services.rs  source_memberships.rs  workspace_plans.rs
identity-rs/store-postgres/tests/: integration.rs
identity-rs/sync-worker/: Cargo.toml
identity-rs/sync-worker/src/: main.rs
monitoring/grafana/dashboards/: identity-plane.json
monitoring/loki/: loki.yaml
monitoring/otel-collector/: otel-collector.yaml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: identity-sidecar.rules.yaml  tenant-router.rules.yaml
monitoring/seaweedfs/: s3.json
monitoring/slo/: check.sh  generate.sh  identity-sidecar.slo.yaml  tenant-router.slo.yaml
monitoring/slo/tests/: tenant-router.slo_test.yaml
monitoring/tempo/: tempo.yaml
openspec/: config.yaml  guidelines.md
openspec/changes/adopt-cedar-policy-gate/: design.md  proposal.md  tasks.md
openspec/changes/apikey-resolve-cache/: proposal.md  tasks.md
openspec/changes/authz-engine-strategy/: EXPLORATION.md
openspec/changes/automate-signing-key-rotation/: proposal.md  tasks.md
openspec/changes/combined-edge-per-route-auth-gate/: design.md  tasks.md
postgres-init/: 10-create-nexus-databases.sql  20-platform-services.sql  30-api-keys.sql  40-certmagic-store.sql
routing-rs/: Cargo.toml  Dockerfile  README.md
routing-rs/cache-redis/: Cargo.toml
routing-rs/cache-redis/src/: lib.rs
routing-rs/control-plane/: Cargo.toml
routing-rs/control-plane/src/: app.rs  audit_api.rs  auth_routes.rs  authz_gate.rs  domains.rs  main.rs  orgs.rs  tenancy.rs  tenants.rs
routing-rs/dns-resolver/: Cargo.toml
routing-rs/dns-resolver/src/: lib.rs
routing-rs/invalidations-nats/: Cargo.toml
routing-rs/invalidations-nats/src/: lib.rs
routing-rs/invalidations-nats/tests/: integration.rs
routing-rs/policy-cedar/: Cargo.toml
routing-rs/policy-cedar/policies/: admin.cedar
routing-rs/policy-cedar/src/: lib.rs
routing-rs/router-core/: Cargo.toml
routing-rs/router-core/src/: admin_authz.rs  audit.rs  auth.rs  cache.rs  context.rs  domain.rs  geo.rs  idempotency.rs  ids.rs  lib.rs  normalize.rs  plan.rs  store.rs  telemetry.rs  verify.rs
routing-rs/store-postgres/: Cargo.toml
routing-rs/store-postgres/migrations/: 0001_certmagic_store.sql  0002_admin_audit.sql  0003_admin_token_scopes.sql
routing-rs/store-postgres/src/: admin_audit.rs  challenge_store.rs  invalidations.rs  lib.rs  membership_store.rs  ownership_store.rs  routing_store.rs
routing-rs/store-postgres/tests/: integration.rs
routing-rs/tenant-router/: Cargo.toml
routing-rs/tenant-router/src/: api.rs  extract.rs  main.rs  response.rs  serve.rs  state.rs  strip.rs  test_support.rs
scripts/: admin-audit-e2e.sh  admin-plane-authz-e2e.sh  authz-global-e2e.sh  contract-signing-e2e.sh  custom-domains-tls-ari.sh  custom-domains-tls-cardinality.sh  custom-domains-tls-e2e.sh  custom-domains-tls-outage.sh  customer-api-keys-e2e.sh  existence-hiding-e2e.sh  go-live-smoke.sh  helm-guards-test.sh  loc_count.sh  mint-dev-sa-token.py  n4-e2e.sh  provision-lib.sh  service-identity-e2e.sh  tenancy-edge-auth-e2e.sh  tenancy-edge-e2e.sh
scripts/load/: README.md  edge-load-ramp.js  edge-load.js  run-load.sh  run-ramp.sh
(+299 files in other folders)
