[workspace]
resolver = "2"
members = ["core", "store-postgres", "sidecar", "sync-worker", "reconciler"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# Domain + shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
# Durable store adapter — Postgres (authoritative store + LISTEN/NOTIFY change
# feed). Feature set matches routing-rs so both planes share one Postgres client
# surface; the statement cache is disabled per-pool in the adapter for
# pooler-safety.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }
# Runtime / observability shared across the binaries
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Control-plane services
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 2
