[package]
name = "authz-admin"
edition.workspace = true
version.workspace = true
description = "Identity-plane administrative surface — authors nexus-native authorization facts (roles, entitlements, suspension)"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "authz-admin"
path = "src/main.rs"

[dependencies]
identity-core = { path = "../core" }
store-postgres = { path = "../store-postgres" }
serde.workspace = true
serde_json.workspace = true
# admin-action-audit: the NDJSON export streams ledger pages (stream::unfold).
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
tower-http.workspace = true
opentelemetry.workspace = true

[dev-dependencies]
# Constant-time-compare + bootstrap-gate unit tests (async fake port impl).
tokio = { workspace = true }
tower.workspace = true
async-trait.workspace = true

[lints]
workspace = true
