[package]
name = "identity-core"
edition.workspace = true
version.workspace = true
description = "Core identity domain types and reconciliation logic for the Nexus identity plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "identity_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true

[dev-dependencies]
# Async test runtime for the projection orchestration tests (fake in-memory ports).
tokio = { workspace = true }

[lints]
workspace = true
