[package]
name = "identity-core"
edition.workspace = true
version.workspace = true
description = "Core identity domain types and reconciliation logic for the Nexus identity plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "identity_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
futures.workspace = true
# admin-action-audit: `aev_<uuidv7>` audit event ids — confined to the `ids`
# module (the identity plane still mints NO actor identity).
uuid.workspace = true
# Telemetry (first-party-telemetry): the shared init lives here so all identity-plane
# binaries wire it identically. tracing/tracing-subscriber move onto the core crate
# because the telemetry module owns the subscriber stack (previously per-binary).
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-appender-tracing.workspace = true

[dev-dependencies]
# Async test runtime for the projection orchestration tests (fake in-memory ports).
tokio = { workspace = true }

[lints]
workspace = true
