[package]
name = "reconciler"
edition.workspace = true
version.workspace = true

[[bin]]
name = "reconciler"
path = "src/main.rs"

[dependencies]
identity-core = { path = "../core" }
store-mongo = { path = "../store-mongo" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
futures = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener", "async-runtime"] }
