[package]
name = "identity-sidecar"
edition.workspace = true
version.workspace = true
description = "Envoy ext_authz sidecar serving identity decisions for the Nexus identity plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "identity-sidecar"
path = "src/main.rs"

[dependencies]
identity-core = { path = "../core" }
store-postgres = { path = "../store-postgres" }
tonic = "0.14"
envoy-types = "0.7"
tokio.workspace = true
tokio-stream = "0.1"
futures.workspace = true
moka = { version = "0.12", features = ["future"] }
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["protobuf", "http-listener", "async-runtime"] }

[lints]
workspace = true
