[package]
name = "identity-sidecar"
edition.workspace = true
version.workspace = true
description = "Envoy ext_authz sidecar serving identity decisions for the Nexus identity plane"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[[bin]]
name = "identity-sidecar"
path = "src/main.rs"

[dependencies]
identity-core = { path = "../core" }
store-postgres = { path = "../store-postgres" }
# adopt-cedar-policy-gate: the L2 authorization PDP adapter. The `cedar-policy` engine
# is isolated INSIDE this crate behind identity_core::PolicyDecisionPoint — the sidecar
# depends only on `policy-cedar` (to construct the engine at startup) and the core port,
# never on `cedar-policy` directly, so the engine stays a reversible adapter swap.
policy-cedar = { path = "../policy-cedar" }
tonic = "0.14"
envoy-types = "0.7"
tokio.workspace = true
tokio-stream = "0.1"
futures.workspace = true
moka = { version = "0.12", features = ["future"] }
serde_json.workspace = true
# identity-contract-signing: ES256 signer for the x-identity-contract token. The
# ONLY crate that touches jsonwebtoken — isolated in `signer.rs` behind the
# identity_core::ContractSigner port.
jsonwebtoken.workspace = true
# automate-signing-key-rotation: the KeyProvider port + OpenBao Transit adapter
# (vaultrs, Mode B local signing) + the generated-JWKS helper (p256). Confined to
# keyprovider.rs / transit.rs / rotation.rs behind the port. async-trait makes the
# provider port object-safe for dyn dispatch (fake vs Transit).
async-trait.workspace = true
vaultrs.workspace = true
# Install the ring crypto provider as the process default (vaultrs uses rustls-no-provider).
rustls.workspace = true
p256.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# first-party-telemetry: metrics push via the OTel meter. Only the API crate is a
# direct dep — the SDK/OTLP pipeline lives in identity_core::telemetry.
opentelemetry.workspace = true

[dev-dependencies]
# http-request-resilience tests: oneshot a router (tower) + serve the real tonic
# ext_proc service on an ephemeral listener (tokio-stream `net`).
tower.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }
# automate-signing-key-rotation: the fake KeyProvider generates EC P-256 keys for the
# rotation/overlap unit tests; rand_core is the CSPRNG it draws from (test-only).
rand_core.workspace = true

[lints]
workspace = true
